fix: text overlapping

--- a/css/style.sass
+++ b/css/style.sass
@@ -778,9 +778,7 @@ a.anchor
   text-decoration: none!important
 
 .trail-conditions
-  text-align: right
-  margin-left: 40px
-  margin-top: 20px
+  margin-top: 30px
   color: #8d8fde
   font-family: "Open Sans", sans-serif
 
@@ -991,6 +989,9 @@ $error-padding-top: 40px, 0px, 20px, 100px
     background-color: #000
     width: 100px
     margin-left: 0px
+  .trail-conditions
+    margin-top: 20px
+
 @media only screen and (max-width: 767px)
   .main-section
     padding-left: 0px!important
@@ -1154,3 +1155,6 @@ $error-padding-top: 40px, 0px, 20px, 100px
       width: 255px
     .client-feedback
       padding-bottom: 800px
+    .trail-conditions
+      margin-top: 20px
+      font-size: 12px   
